# sand

./: .envrc  .gitignore  Cargo.toml  Makefile  PKGBUILD  README.md  dev_daemon.py  justfile  rust-toolchain.toml  test.py
.github/workflows/: ci.yml
resources/: timer_sound.flac
resources/systemd/: sand.service.in
src/: client.rs  daemon.rs  main.rs  sand.rs
src/client/: daemon_connection.rs  ui.rs
src/daemon/: audio.rs  ctx.rs  handle_client.rs
src/sand/: audio.rs  cli.rs  duration.rs  message.rs  socket.rs  timer.rs  timers.rs
