[package]
name = "sand"
version = "0.3.1"
edition = "2021"

[profile.release]
strip = true

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
colog = "1.4.0"
dashmap = "6.0.1"
derive_more = { version = "2", features = ["from", "from_str"] }
dirs = "6.0"
log = "0.4.28"
logind-zbus = "5.3.2"
notify-rust = "4.11.1"
rodio = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
zbus = "5.12.0"
