[package]
name = "sand"
version = "0.6.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
colog = "1.4.0"
crossterm = "0.29.0"
dashmap = "6.0.1"
derive_more = { version = "2", features = ["from", "from_str"] }
dirs = "6.0"
indoc = "2.0.7"
log = "0.4.28"
logind-zbus = "5.3.2"
notify-rust = "4.11.1"
rodio = "0.21.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
termbg = "0.6.2"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
zbus = "5.12.0"
